--- a/Gnoth Files/template.html
+++ b/Gnoth Files/template.html
@@ -39,8 +39,8 @@
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
-            <!-- About-->
-            <section class="resume-section" id="about">
+            <!--title-->
+            <section class="resume-section" id="title">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Student Club
@@ -49,7 +49,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
-                        <a href="mailto:name@email.com">SomeEmail@ptcollege.edu</a>
+                        <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <!-- 
