--- a/Gnoth Files/template.html
+++ b/Gnoth Files/template.html
@@ -61,6 +61,7 @@
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div> 
                     -->
+                    <a id="scroll" class="hideScroll" href="#">Click here To go to Form</a>
                 </div>
             </section>
             <hr class="m-0" />
