--- a/Gnoth Files/checkRequest.html
+++ b/Gnoth Files/checkRequest.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- javascript that scrolls to form section by clikcing invisible <a> when window loads -->
+        <script src="js/autoScroll.js" defer></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -25,10 +27,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
+                    <li class="nav-item active"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fundraising.html">Fundraising Request Form</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="checkRequest.html">Check Request Form</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="checkRequest.html">Check Request Form</a></li>
                     <!-- 
                         just in case we need 1 or 2 more nav items in the future
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
@@ -51,7 +53,9 @@
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    
+                    <!-- <h2>Student Organization</h2>
+                        <h3>Check Request Form</h3> -->
+                        <a id="scroll" class="hideScroll" href="#checkRequest">Click here To go to Form</a>
                     <!-- 
                         in case we decide we want to add these back eventually for some reason
                         <div class="social-icons">
@@ -64,14 +68,14 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Fundraising form-->
-            <section class="resume-section" id="meetingEventTracker">
+            <!-- Check Request form-->
+            <section class="resume-section" id="checkRequest">
                 <div class="resume-section-content">
                     <section class="mb-5">
                         <h2>Student Organization</h2>
                         <h3>Check Request Form</h3>
                     </section> 
-                    <form class="mb-5" action="#" method="get" id="meetEventTracker">
+                    <form class="mb-5" action="#" method="get" id="orgCheckRequest">
                         <section id="payTo">
                             <label for="reqPayTo">Request for payment to</label>
                             <input type="text" name="reqPayTo" placeholder="Full Name of Payee/Organiztion">
