--- a/Gnoth Files/fundraising.html
+++ b/Gnoth Files/fundraising.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- javascript that scrolls to form section by clikcing invisible <a> when window loads -->
+        <script src="js/autoScroll.js" defer></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -27,7 +29,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fundraising.html">Fundraising Request Form</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="fundraising.html">Fundraising Request Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="checkRequest.html">Check Request Form</a></li>
                     <!-- 
                         just in case we need 1 or 2 more nav items in the future
@@ -51,7 +53,9 @@
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    
+                    <h2>Student Organization</h2>
+                        <!-- <h3>Fundraising Request Form</h3> -->
+                        <a id ="scroll" class="hideScroll" href="#fundraising">Click here To go to Form</a>
                     <!-- 
                         in case we decide we want to add these back eventually for some reason
                         <div class="social-icons">
@@ -65,13 +69,13 @@
             </section>
             <hr class="m-0" />
             <!-- Fundraising form-->
-            <section class="resume-section" id="meetingEventTracker">
+            <section class="resume-section" id="fundraising">
                 <div class="resume-section-content">
                     <section class="mb-5">
                         <h2>Student Organization</h2>
                         <h3>Fundraising Request Form</h3>
                     </section> 
-                    <form class="mb-5" action="#" method="get" id="meetEventTracker">
+                    <form class="mb-5" action="#" method="get" id="funds">
                         <section id="orgName">
                             <label for="OrgName">Name of Organization</label>
                             <input type="text" name="OrgName" placeholder="Organization Name">
@@ -85,7 +89,7 @@
                             <input type="email" name="OrgEmail" placeholder="bob@nomail.com">
                         </section>
                         <section id="fundDateTime">
-                            <label for="fundDateTime">Date/Time of Meeting/Event</label>
+                            <label for="fundDateTime">Date/Time of fundraiser</label>
                             <input type="datetime-local" name="fundDateTime">
                         </section>
                         <section id="fundDescription">
