--- a/Gnoth Files/fundraising.html
+++ b/Gnoth Files/fundraising.html
@@ -53,7 +53,7 @@
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    <h2>Student Organization</h2>
+                    <!-- <h2>Student Organization</h2> -->
                         <!-- <h3>Fundraising Request Form</h3> -->
                         <a id ="scroll" class="hideScroll" href="#fundraising">Click here To go to Form</a>
                     <!-- 
