--- a/Gnoth Files/index.html
+++ b/Gnoth Files/index.html
@@ -27,7 +27,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="index.html">Organization Guidelines</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="index.html">Student Organization Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="orgGuidelines.html">Organization Guidelines</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fundraising.html">Fundraising Request Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="checkRequest.html">Check Request Form</a></li>
@@ -53,8 +54,8 @@
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    <h2 class="mb-5">Organization Guidelines</h2>
-                    <a id="scroll" href="#guideLines">Click Here to See Guidelines</a>
+                    <h2 class="mb-5">Student Organization Cotacts</h2>
+                    <a id="scroll" href="#contacts">Click Here to See Faculty Contacts</a>
                     <!-- 
                         in case we decide we want to add these back eventually for some reason
                         <div class="social-icons">
@@ -68,88 +69,172 @@
             </section>
             <hr class="m-0" />
             <!-- Organization Guidelines-->
-            <section class="resume-section" id="guideLines">
+            <section class="resume-section" id="contacts">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Organization Guidelines</h2>
+                    <h2 class="mb-5">Student Organization Contacts</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <u>Governing Document</u>
+                            <u>Anime</u>
                             <ul>
-                                <li>Develop a governing document (Constitution/Code of Conduct/etc) for your organization that includes the guidelines for members to follow</li>
-                                <li>This document should clearly define student leadershipt opportunities (ex. President, VP, Chairman, Secretary, etc.)</li>
-                                <li>This Document should be reviewd once a year</li>
+                                <li>Faculty Advisor: Lee Cottrell</li>
+                                <li>Phone: 412-809-5399 x4837</li>
+                                <li><a href="mailTo:Cottrell.Lee@ptcollege.edu">Email: Cottrell.Lee@ptcollege.edu</a></li>
+                                <li>Tuesday, 4:30-6:30 Room #605</li>
                             </ul>
                         </li>
                         <li>
-                            <u>Meetings</u>
+                            <u>ASHARE</u>
                             <ul>
-                                <li>Provide the day, time and location of your meetings and updated at the beginning of every quarter</li>
-                                <li>Organizations should meet a minimum of once a quarter</li>
-                                <li>A tracker sheet should be completed and returned after every meeting/event</li>
+                                <li>Faculty Advisor: Scott Lynch</li>
+                                <li>Phone: 412-809-3519</li>
+                                <li><a href="mailTo:Lynch.Scott@ptcollege.edu">Email: Lynch.Scott@ptcollege.edu</a></li>
                             </ul>
                             
                         </li>
                         <li>
-                            <u>Finances</u>
+                            <u>ASME</u>
                             <ul>
-                                <li>All organizations will be given an individual banking account that is maintained by the Director Student Activities. This account is yours to use at your discretion.</li>
-                                <li>All funds raised, gifted, or allotted to the club should be deposited into the student organization's account within 48 hours.</li>
-                                <li>Any monies needed from the account may be acquired through a receipt or check request.</li>
-                                <li>Any items purchased through the PTC Café can be acquired with a voucher from Student Activities.</li>
+                                <li>Faculty Advisor: Nick Otteni</li>
+                                <li>Phone: 412-809-5399 x4884</li>
+                                <li><a href="mailTo:Otteni.Nicholas@ptcollege.edu">Email: Otteni.Nicholas@ptcollege.edu</a></li>
                             </ul>
                         </li>
                         <li>
-                            <u>Fundraising</u>
+                            <u>ASTA</u>
                             <ul>
-                                <li>All organizations must complete the Guidelines for Student Organizations Fundraising form prior to organizing event, activity, etc.</li>    
+                                <li>Faculty Advisor: Mark Bellemare</li>
+                                <li>Phone: 412-809-5236</li>
+                                <li><a href="mailTo:Bellemare.Mark@ptcollege.edu">Email: BelleMare.Mark@ptcollege.edu</a></li>
                             </ul>   
                         </li>
                         <li>
-                            <u>Signage,Rooms & Tables</u>
+                            <u>Creative Writing Club</u>
                             <ul>
-                                <li>Signage can be made by a organization member or through our Marketing Department</li>
-                                <li>Signage should be submitted to Student Activities for prior approval before given to Marketing</li>
-                                <li>All room reservations requests should be made by the advisor</li>
-                                <li>If you would like to reserve a table on level 4, notify Student Activities to put on the REservation Calendar</li>
+                                <li>Faculty Advisor: Jessica Nowacki</li>
+                                <li>Phone: 412-809-5399 x4947</li>
+                                <li><a href="mailTo:DImperio.Cristina@ptcollege.edu">Email: DImperio.Cristina@ptcollege.edu</a></li>
+                                <li>Tuesday, 4:30-5:30, Room #320</li>
                             </ul>
                         </li>
                         <li>
-                            <u>Social Media</u>
+                            <u>Criminal Justice Club</u>
                             <ul>
-                                <li>Do not create Pittsburgh Technical College social media properties. Do not create social media pages or groups affiliated with Pittsburgh Technical College. 
-                                    If you or your PTC organization has news to share via social media, please submit that information to Student Activities</li>
-                                <li>All funds raised, gifted, or allotted to the club should be deposited into the student organization's account within 48 hours.</li>
-                                <li>Any monies needed from the account may be acquired through a receipt or check request.</li>
-                                <li>Any items purchased through the PTC Café can be acquired with a voucher from Student Activities.</li>
+                                <li>Faculty Advisor: Shannon Wintruba</li>
+                                <li>Phone: 412-809-4903</li>
+                                <li><a href="mailTo:Wintruba.Shannon@ptcollege.edu">Email: Wintruba.Shannon@ptcollege.edu</a></li>
+                                
                             </ul>
                         </li>
                         <li>
-                            <u>Campus Environment</u>
+                            <u>Culinary Club</u>
                             <ul>
-                                <li>Each organization will participate in four PTC sponsored events per year (PTC Carnival, Alcohol Mix-Off, Activities Fairs, etc.)</li> 
+                                <li>Faculty Advisor: Dave Russo</li>
+                                <li>Phone: 412-809-5100</li>
+                                <li><a href="mailTo:Russo.Dave@ptcollege.edu">Email: Russo.Dave@ptcollege.edu</a></li>
+                                <li>Wednesday, 10:30-11:00/4:30-5:00</li>
                             </ul>
                         </li>
                         <li>
-                            <u>Community Service</u>
+                            <u>CyberSecurity Club</u>
                             <ul>
-                                <li>Each club will sponsor a minimum of one community service project per year</li>
-                                <li>All community service events must be approved by the faculty/staff advisor</li>
-                                <li>The Community Service Event Form should be completed and submitted to the Community Service Coordinator prior to the event.</li>
+                                <li>Faculty Advisor: Michael Russell</li>
+                                <li>Phone: 412-809-5399 X4737</li>
+                                <li><a href="mailTo:Russell.Michael@ptcollege.edu">Email: Russell.Michael@ptcollege.edu</a></li>
                             </ul>
                         </li>
                         <li>
-                            <u>Off Campus Trips</u>
+                            <u>DECA</u>
                             <ul>
-                                <li>Any organization wishing to sponsor a trip to an off-campus activity 
-                                    (conference, workshop, and special event) must register this trip with the Student Activites Office</li>
-                                <li>A designated advisor must accompany students on off-campus trips</li>
+                                <li>Faculty Advisor: Tracie Brady</li>
+                                <li>Phone: 412-809-5399 x4627</li>
+                                <li><a href="mailTo:Brady.Tracie@ptcollege.edu">Email: Brady.Tracie@ptcollege.edu</a></li>
+                                <li>Monday, 4:30-6:00, Room #511</li>
                             </ul>
                             <li>
-                                <u>Inactive Status</u>
+                                <u>Drama Club</u>
                                 <ul>
-                                    <li>It is expected the PTC student organizations follow the guidelines listed above. An organization will be deemed "inactive"
-                                        if at least one quarter of total inactivity has been experienced or does not complete the campus environment/community service expectations</li>
-                                    <li>All further benefits associated with PTC and the organization are rescinded and any funds will be forfeited</li>
+                                    <li>Faculty Advisor: Amber Monigold</li>
+                                    <li>Phone: 412-809-5130</li>
+                                    <li><a href="mailTo:Monigold.Amber@ptcollege.edu">Email: Monigold.Amber@ptcollege.edu</a></li>
+                                    <li>Thursday, 5:30-8:00, Room #401.2</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Dungeons & Dragons</u>
+                                <ul>
+                                    <li>Faculty Advisor: Lee Cottrell</li>
+                                    <li>Phone: 412-809-5399 x4837</li>
+                                    <li><a href="mailTo:Cottrell.Lee@ptcollege.edu">Email: Cottrell.Lee@ptcollege.edu</a></li>
+                                    <li>Mondays, 4:30-10:00, Room #401.2</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Film Club</u>
+                                <ul>
+                                    <li>Faculty Advisor: Lauren Zito</li>
+                                    <li>Phone: 412-809-5399 x 4775</li>
+                                    <li><a href="mailTo:Zito.Lauren@ptcollege.edu">Email: Zito.Lauren@ptcollege.edu</a></li>
+                                    <li>Thursday, 5:00-7:00, Room #302</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Gaming Club</u>
+                                <ul>
+                                    <li>Faculty Advisor: Dave Hertz</li>
+                                    <li>Phone: 412-809-5399 x 4832</li>
+                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                    <li>Thursday, 5:00</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Gay Straight Alliance (GSA)</u>
+                                <ul>
+                                    <li>Faculty Advisor: Shane McGarvey</li>
+                                    <li>Phone: 412-809-5210</li>
+                                    <li><a href="mailTo:McGarvey.Shane@ptcollege.edu">Email: McGarvey.Shane@ptcollege.edu</a></li>
+                                    <li>Wednesday, 4:30-5:30, S/F Lounge</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>IT Research Certification Club</u>
+                                <ul>
+                                    <li>Faculty Advisor: Wilfred Mutale</li>
+                                    <li>Phone: 412-809-5135</li>
+                                    <li><a href="mailTo:Mutale.Wilfred@ptcollege.edu">Email: Mutale.Wilfred@ptcollege.edu</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Magic Club (The Gathering)</u>
+                                <ul>
+                                    <li>Faculty Advisor: Dave Hertz</li>
+                                    <li>Phone: 412-809-5399 x 4832</li>
+                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                    <li>Wednesday, 4:30-10:00, Room #302</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Recharge</u>
+                                <ul>
+                                    <li>Faculty Advisor: Tom McDermott</li>
+                                    <li>Phone: 412-809-5399 x4796</li>
+                                    <li><a href="mailTo:McDermott.Tom@ptcollege.edu">Email: McDermott.Tom@ptcollege.edu</a></li>
+                                    <li>Wednesday, 11:30-12:30, Room #602</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Software Development Club</u>
+                                <ul>
+                                    <li>Faculty Advisor: Dave Hertz</li>
+                                    <li>Phone: 412-809-5399 x 4832</li>
+                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <u>Women In STEAM</u>
+                                <ul>
+                                    <li>Faculty Advisor: Chuck Eltringham</li>
+                                    <li>Phone: 412-809-5284</li>
+                                    <li><a href="mailTo:Eltringham.Charles@ptcollege.edu">Email: Eltringham.Charles@ptcollege.edu</a></li>
                                 </ul>
                             </li>
                         </li>
