--- a/Gnoth Files/meetEventTrack.html
+++ b/Gnoth Files/meetEventTrack.html
@@ -27,7 +27,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Student Organization Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="orgGuidelines.html">Organization Guidelines</a></li>
                     <li class="nav-item "><a class="nav-link js-scroll-trigger active" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fundraising.html">Fundraising Request Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="checkRequest.html">Check Request Form</a></li>
@@ -97,7 +98,7 @@
                             <input type="number" min="1" name="stuOrgAttendAmount" value="1">
                         </section>
                         <section id="eventCost">
-                            <label for="stuOrgCostAmount">Number of Attending Members at Meeting/Event</label>
+                            <label for="stuOrgCostAmount">Cost for Meeting/Event</label>
                             <input type="number" name="stuOrgCostAmount" step="0.01" min="0" value="0.00">
                         </section>
                         <section id="futureEvents">
