--- a/Gnoth Files/checkRequest.html
+++ b/Gnoth Files/checkRequest.html
@@ -27,7 +27,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Student Organization Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="orgGuidelines.html">Organization Guidelines</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fundraising.html">Fundraising Request Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="checkRequest.html">Check Request Form</a></li>
