--- a/Gnoth Files/fundraising.html
+++ b/Gnoth Files/fundraising.html
@@ -27,7 +27,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Organization Guidelines</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Student Organization Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="orgGuidelines.html">Organization Guidelines</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="meetEventTrack.html">Meeting/Event Tracker Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="fundraising.html">Fundraising Request Form</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="checkRequest.html">Check Request Form</a></li>
@@ -53,7 +54,7 @@
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    <h2>Student Organization</h2>
+                    <!-- <h2>Student Organization</h2> -->
                         <!-- <h3>Fundraising Request Form</h3> -->
                         <a id ="scroll" class="hideScroll" href="#fundraising">Click here To go to Form</a>
                     <!-- 
