fixed spelling mistake

--- a/Gnoth Files/checkRequest.html
+++ b/Gnoth Files/checkRequest.html
@@ -91,7 +91,7 @@
                             <textarea name="reqRsn" placeholder="Explanation of why you a check is requested"></textarea>
                         </section>
                             <section id="indReqCheck">
-                                <label for="chkReq">Individual requestiong check</label>
+                                <label for="chkReq">Individual requesting check</label>
                                 <input type="text" name="chkReq">
                             </section>
                             <section id="chargedOrg">
