new forms/function added
I got the email functionality added to the forms, They will now send emails to the email filled into the form, MAKE SURE TO READ MY NOTES IN DISCORD ABOUT THIS!!!!

--- a/Gnoth Files/checkRequest.html
+++ b/Gnoth Files/checkRequest.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -75,8 +76,11 @@
                     <section class="mb-5">
                         <h2>Student Organization</h2>
                         <h3>Check Request Form</h3>
-                    </section> 
-                    <form class="mb-5" action="#" method="get" id="orgCheckRequest">
+                    </section>
+                    <!-- script gets form from site and updates it as it gets updated on jotform.com -->
+                    <script type="text/javascript" src="https://form.jotform.com/jsform/220556051403141"></script>
+                    <!-- Old original form -->
+                    <!-- <form class="mb-5" action="formSub.php" method="post" id="orgCheckRequest">
                         <section id="payTo">
                             <label for="reqPayTo">Request for payment to</label>
                             <input type="text" name="reqPayTo" placeholder="Full Name of Payee/Organiztion">
@@ -119,13 +123,13 @@
                             <br>
                             <textarea name="comm" placeholder="Provide any questions or comments you may have"></textarea>
                         </section>                                        
-                        <input type="button" name="formSubmit" value="Submit">
-                        <!--
+                        <input type="submit" name="formSubmit" value="Submit">
+                        <!-
                             There's an extra little bottom portion on this one as well that looks like its 
                             supposed to be filled out by the person recieving the form, I left it out for now
                             so we can discuss how we want to handle that at our group meeting
-                        -->
-                    </form>
+                        ->
+                    </form> -->
                 </div>
             </section>       
         </div>
