--- a/Gnoth Files/meetEventTrack.html
+++ b/Gnoth Files/meetEventTrack.html
@@ -75,8 +75,11 @@
                     <section class="mb-5">
                         <h2>Student Organization</h2>
                         <h3>Meeting/Event Tracker Sheet</h3>
-                    </section> 
-                    <form class="mb-5" action="#" method="get" id="meetEventTracker">
+                    </section>
+                    <!-- script gets form from site and updates it as it gets updated on jotform.com -->
+                    <script type="text/javascript" src="https://form.jotform.com/jsform/220556465866163"></script> 
+                    <!--Old original form-->
+                    <!-- <form class="mb-5" action="#" method="get" id="meetEventTracker">
                         <section id="orgName">
                             <label for="stuOrgName">Name of Student Organization</label>
                             <input type="text" name="stuOrgName" placeholder="Student Org Name">
@@ -111,7 +114,7 @@
                             <input type="number" min="1" name="stuOrgCurrentAmount" value="1">
                         </section>
                         <input type="button" name="formSubmit" value="Submit">
-                    </form>
+                    </form> -->
                 </div>
             </section>       
         </div>
