--- a/Gnoth Files/checkRequest.html
+++ b/Gnoth Files/checkRequest.html
@@ -18,7 +18,7 @@
         <!-- javascript that scrolls to form section by clikcing invisible <a> when window loads -->
         <script src="js/autoScroll.js" defer></script>
     </head>
-    <body id="page-top">
+    <body id="page-top" class="text-primary cool-color">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
