--- a/Gnoth Files/fundraising.html
+++ b/Gnoth Files/fundraising.html
@@ -20,7 +20,7 @@
     <script src="js/autoScroll.js" defer></script>
 </head>
 
-<body id="page-top">
+<body id="page-top" class="text-primary cool-color">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
