--- a/Gnoth Files/index.html
+++ b/Gnoth Files/index.html
@@ -17,10 +17,10 @@
         <!-- javascript that scrolls to form section by clikcing invisible <a> when window loads -->
         <!-- <script src="js/autoScroll.js" defer></script> -->
     </head>
-    <body id="page-top">
+    <body id="page-top" class="cool-color text-primary">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger"class="color-shift" href="#page-top">
                 <span class="d-block d-lg-none">PTC</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Pittsburgh_Technical_College.jpg" alt="School logo" /></span>
             </a>
@@ -45,12 +45,12 @@
             <!-- Title-->
             <section class="resume-section" id="title">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
+                    <h1>
                         Student Club
                         <br>
-                        <span class="text-primary">Activities and Forms</span>
+                        <span>Activities and Forms</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="subheading mb-5 text-primary">
                         1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
@@ -72,7 +72,7 @@
             <section class="resume-section" id="contacts">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Student Organization Contacts</h2>
-                    <ul class="fa-ul mb-0">
+                    <ul class="fa-ul mb-0 text-primary">
                         <li>
                             <u>Anime</u>
                             <ul>
