--- a/Gnoth Files/meetEventTrack.html
+++ b/Gnoth Files/meetEventTrack.html
@@ -17,9 +17,9 @@
         <!-- javascript that scrolls to form section by clikcing invisible <a> when window loads -->
         <script src="js/autoScroll.js" defer></script>
     </head>
-    <body id="page-top">
+    <body id="page-top" class="cool-color">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-primary" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">PTC</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Pittsburgh_Technical_College.jpg" alt="School logo" /></span>
